--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
 
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="AIzaSyA2WOT_OF5oh7FKZxq1BGXaXD14ezNIiOg" /> <!-- Don't push key online -->
+            android:value="API_KEY" />
 
         <activity
             android:name=".ui.MainActivity"
